cmake_minimum_required(VERSION 3.10)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()


project(libGLESv2)

include("$ENV{VITASDK}/share/vita.cmake" REQUIRED)
add_definitions(-D__psp2__)

set(SOURCES
    include/GLES2/gl2.h
    include/GLES2/gl2ext.h
    include/GLES2/gl2platform.h
    include/GLES3/gl3.h
    include/GLES3/gl3platform.h
    include/GLES3/gl31.h
    include/GLES3/gl32.h
    include/GLSLANG/ShaderLang.h
    include/GLSLANG/ShaderVars.h
    include/KHR/khrplatform.h
    include/angle_gl.h
    src/compiler/translator/BaseTypes.h
    src/compiler/translator/BuiltInFunctionEmulator.cpp
    src/compiler/translator/BuiltInFunctionEmulator.h
    src/compiler/translator/CallDAG.cpp
    src/compiler/translator/CallDAG.h
    src/compiler/translator/CodeGen.cpp
    src/compiler/translator/CollectVariables.cpp
    src/compiler/translator/CollectVariables.h
    src/compiler/translator/Common.h
    src/compiler/translator/Compiler.cpp
    src/compiler/translator/Compiler.h
    src/compiler/translator/ConstantUnion.cpp
    src/compiler/translator/ConstantUnion.h
    src/compiler/translator/Declarator.cpp
    src/compiler/translator/Declarator.h
    src/compiler/translator/Diagnostics.cpp
    src/compiler/translator/Diagnostics.h
    src/compiler/translator/DirectiveHandler.cpp
    src/compiler/translator/DirectiveHandler.h
    src/compiler/translator/ExtensionBehavior.cpp
    src/compiler/translator/ExtensionBehavior.h
    src/compiler/translator/FlagStd140Structs.cpp
    src/compiler/translator/FlagStd140Structs.h
    src/compiler/translator/FunctionLookup.cpp
    src/compiler/translator/FunctionLookup.h
    src/compiler/translator/HashNames.cpp
    src/compiler/translator/HashNames.h
    src/compiler/translator/ImmutableString.cpp
    src/compiler/translator/ImmutableString.h
    src/compiler/translator/ImmutableStringBuilder.cpp
    src/compiler/translator/ImmutableStringBuilder.h
    src/compiler/translator/InfoSink.cpp
    src/compiler/translator/InfoSink.h
    src/compiler/translator/Initialize.cpp
    src/compiler/translator/Initialize.h
    src/compiler/translator/InitializeDll.cpp
    src/compiler/translator/InitializeDll.h
    src/compiler/translator/InitializeGlobals.h
    src/compiler/translator/IntermNode.h
    src/compiler/translator/IntermNode.cpp
    src/compiler/translator/IsASTDepthBelowLimit.cpp
    src/compiler/translator/IsASTDepthBelowLimit.h
    src/compiler/translator/Operator.cpp
    src/compiler/translator/Operator.h
    src/compiler/translator/OutputTree.cpp
    src/compiler/translator/OutputTree.h
    src/compiler/translator/ParseContext.cpp
    src/compiler/translator/ParseContext.h
    src/compiler/translator/ParseContext_autogen.h
    src/compiler/translator/PoolAlloc.cpp
    src/compiler/translator/PoolAlloc.h
    src/compiler/translator/Pragma.h
    src/compiler/translator/QualifierTypes.h
    src/compiler/translator/QualifierTypes.cpp
    src/compiler/translator/Severity.h
    src/compiler/translator/ShaderLang.cpp
    src/compiler/translator/ShaderVars.cpp
    src/compiler/translator/StaticType.h
    src/compiler/translator/Symbol.cpp
    src/compiler/translator/Symbol.h
    src/compiler/translator/SymbolTable.cpp
    src/compiler/translator/SymbolTable.h
    src/compiler/translator/SymbolTable_autogen.cpp
    src/compiler/translator/SymbolTable_autogen.h
    src/compiler/translator/SymbolUniqueId.cpp
    src/compiler/translator/SymbolUniqueId.h
    src/compiler/translator/Types.cpp
    src/compiler/translator/Types.h
    src/compiler/translator/ValidateGlobalInitializer.cpp
    src/compiler/translator/ValidateGlobalInitializer.h
    src/compiler/translator/ValidateLimitations.cpp
    src/compiler/translator/ValidateLimitations.h
    src/compiler/translator/ValidateMaxParameters.h
    src/compiler/translator/ValidateMaxParameters.cpp
    src/compiler/translator/ValidateOutputs.cpp
    src/compiler/translator/ValidateOutputs.h
    src/compiler/translator/ValidateSwitch.cpp
    src/compiler/translator/ValidateSwitch.h
    src/compiler/translator/ValidateVaryingLocations.cpp
    src/compiler/translator/ValidateVaryingLocations.h
    src/compiler/translator/VariablePacker.cpp
    src/compiler/translator/VariablePacker.h
    src/compiler/translator/blocklayout.cpp
    src/compiler/translator/blocklayout.h
    src/compiler/translator/glslang.h
    src/compiler/translator/glslang.l
    src/compiler/translator/glslang.y
    src/compiler/translator/glslang_lex.cpp
    src/compiler/translator/glslang_tab.cpp
    src/compiler/translator/glslang_tab.h
    src/compiler/translator/length_limits.h
    src/compiler/translator/util.cpp
    src/compiler/translator/util.h
    src/compiler/translator/tree_ops/AddAndTrueToLoopCondition.cpp
    src/compiler/translator/tree_ops/AddAndTrueToLoopCondition.h
    src/compiler/translator/tree_ops/BreakVariableAliasingInInnerLoops.cpp
    src/compiler/translator/tree_ops/BreakVariableAliasingInInnerLoops.h
    src/compiler/translator/tree_ops/ClampFragDepth.cpp
    src/compiler/translator/tree_ops/ClampFragDepth.h
    src/compiler/translator/tree_ops/ClampPointSize.cpp
    src/compiler/translator/tree_ops/ClampPointSize.h
    src/compiler/translator/tree_ops/DeclareAndInitBuiltinsForInstancedMultiview.h
    src/compiler/translator/tree_ops/DeclareAndInitBuiltinsForInstancedMultiview.cpp
    src/compiler/translator/tree_ops/DeferGlobalInitializers.cpp
    src/compiler/translator/tree_ops/DeferGlobalInitializers.h
    src/compiler/translator/tree_ops/EmulateGLFragColorBroadcast.cpp
    src/compiler/translator/tree_ops/EmulateGLFragColorBroadcast.h
    src/compiler/translator/tree_ops/EmulatePrecision.cpp
    src/compiler/translator/tree_ops/EmulatePrecision.h
    src/compiler/translator/tree_ops/ExpandIntegerPowExpressions.cpp
    src/compiler/translator/tree_ops/ExpandIntegerPowExpressions.h
    src/compiler/translator/tree_ops/FoldExpressions.cpp
    src/compiler/translator/tree_ops/FoldExpressions.h
    src/compiler/translator/tree_ops/InitializeVariables.cpp
    src/compiler/translator/tree_ops/InitializeVariables.h
    src/compiler/translator/tree_ops/NameEmbeddedUniformStructs.cpp
    src/compiler/translator/tree_ops/NameEmbeddedUniformStructs.h
    src/compiler/translator/tree_ops/PruneEmptyCases.cpp
    src/compiler/translator/tree_ops/PruneEmptyCases.h
    src/compiler/translator/tree_ops/PruneNoOps.cpp
    src/compiler/translator/tree_ops/PruneNoOps.h
    src/compiler/translator/tree_ops/RecordConstantPrecision.cpp
    src/compiler/translator/tree_ops/RecordConstantPrecision.h
    src/compiler/translator/tree_ops/RegenerateStructNames.cpp
    src/compiler/translator/tree_ops/RegenerateStructNames.h
    src/compiler/translator/tree_ops/RemoveArrayLengthMethod.cpp
    src/compiler/translator/tree_ops/RemoveArrayLengthMethod.h
    src/compiler/translator/tree_ops/RemoveInvariantDeclaration.cpp
    src/compiler/translator/tree_ops/RemoveInvariantDeclaration.h
    src/compiler/translator/tree_ops/RemovePow.cpp
    src/compiler/translator/tree_ops/RemovePow.h
    src/compiler/translator/tree_ops/RemoveUnreferencedVariables.cpp
    src/compiler/translator/tree_ops/RemoveUnreferencedVariables.h
    src/compiler/translator/tree_ops/RewriteAtomicFunctionExpressions.cpp
    src/compiler/translator/tree_ops/RewriteAtomicFunctionExpressions.h
    src/compiler/translator/tree_ops/RewriteDoWhile.cpp
    src/compiler/translator/tree_ops/RewriteDoWhile.h
    src/compiler/translator/tree_ops/RewriteStructSamplers.cpp
    src/compiler/translator/tree_ops/RewriteStructSamplers.h
    src/compiler/translator/tree_ops/RewriteRepeatedAssignToSwizzled.cpp
    src/compiler/translator/tree_ops/RewriteRepeatedAssignToSwizzled.h
    src/compiler/translator/tree_ops/RewriteTexelFetchOffset.cpp
    src/compiler/translator/tree_ops/RewriteTexelFetchOffset.h
    src/compiler/translator/tree_ops/RewriteUnaryMinusOperatorFloat.cpp
    src/compiler/translator/tree_ops/RewriteUnaryMinusOperatorFloat.h
    src/compiler/translator/tree_ops/RewriteUnaryMinusOperatorInt.cpp
    src/compiler/translator/tree_ops/RewriteUnaryMinusOperatorInt.h
    src/compiler/translator/tree_ops/ScalarizeVecAndMatConstructorArgs.cpp
    src/compiler/translator/tree_ops/ScalarizeVecAndMatConstructorArgs.h
    src/compiler/translator/tree_ops/SeparateDeclarations.cpp
    src/compiler/translator/tree_ops/SeparateDeclarations.h
    src/compiler/translator/tree_ops/SimplifyLoopConditions.cpp
    src/compiler/translator/tree_ops/SimplifyLoopConditions.h
    src/compiler/translator/tree_ops/SplitSequenceOperator.cpp
    src/compiler/translator/tree_ops/SplitSequenceOperator.h
    src/compiler/translator/tree_ops/UnfoldShortCircuitAST.cpp
    src/compiler/translator/tree_ops/UnfoldShortCircuitAST.h
    src/compiler/translator/tree_ops/UseInterfaceBlockFields.cpp
    src/compiler/translator/tree_ops/UseInterfaceBlockFields.h
    src/compiler/translator/tree_ops/VectorizeVectorScalarArithmetic.cpp
    src/compiler/translator/tree_ops/VectorizeVectorScalarArithmetic.h
    src/compiler/translator/tree_util/BuiltIn_autogen.h
    src/compiler/translator/tree_util/FindMain.cpp
    src/compiler/translator/tree_util/FindMain.h
    src/compiler/translator/tree_util/FindSymbolNode.cpp
    src/compiler/translator/tree_util/FindSymbolNode.h
    src/compiler/translator/tree_util/IntermNodePatternMatcher.cpp
    src/compiler/translator/tree_util/IntermNodePatternMatcher.h
    src/compiler/translator/tree_util/IntermNode_util.cpp
    src/compiler/translator/tree_util/IntermNode_util.h
    src/compiler/translator/tree_util/IntermTraverse.cpp
    src/compiler/translator/tree_util/IntermTraverse.h
    src/compiler/translator/tree_util/NodeSearch.h
    src/compiler/translator/tree_util/ReplaceVariable.cpp
    src/compiler/translator/tree_util/ReplaceVariable.h
    src/compiler/translator/tree_util/RunAtTheEndOfShader.cpp
    src/compiler/translator/tree_util/RunAtTheEndOfShader.h
    src/compiler/translator/tree_util/Visit.h
    src/third_party/compiler/ArrayBoundsClamper.cpp
    src/third_party/compiler/ArrayBoundsClamper.h
    src/compiler/translator/BuiltInFunctionEmulatorGLSL.cpp
    src/compiler/translator/BuiltInFunctionEmulatorGLSL.h
    src/compiler/translator/ExtensionGLSL.cpp
    src/compiler/translator/ExtensionGLSL.h
    src/compiler/translator/OutputGLSL.cpp
    src/compiler/translator/OutputGLSL.h
    src/compiler/translator/OutputGLSLBase.cpp
    src/compiler/translator/OutputGLSLBase.h
    src/compiler/translator/TranslatorGLSL.cpp
    src/compiler/translator/TranslatorGLSL.h
    src/compiler/translator/VersionGLSL.cpp
    src/compiler/translator/VersionGLSL.h
    src/compiler/translator/OutputESSL.cpp
    src/compiler/translator/OutputESSL.h
    src/compiler/translator/TranslatorESSL.cpp
    src/compiler/translator/TranslatorESSL.h
    src/compiler/preprocessor/DiagnosticsBase.cpp
    src/compiler/preprocessor/DiagnosticsBase.h
    src/compiler/preprocessor/DirectiveHandlerBase.cpp
    src/compiler/preprocessor/DirectiveHandlerBase.h
    src/compiler/preprocessor/DirectiveParser.cpp
    src/compiler/preprocessor/DirectiveParser.h
    src/compiler/preprocessor/ExpressionParser.cpp
    src/compiler/preprocessor/ExpressionParser.h
    src/compiler/preprocessor/ExpressionParser.y
    src/compiler/preprocessor/Input.cpp
    src/compiler/preprocessor/Input.h
    src/compiler/preprocessor/Lexer.cpp
    src/compiler/preprocessor/Lexer.h
    src/compiler/preprocessor/Macro.cpp
    src/compiler/preprocessor/Macro.h
    src/compiler/preprocessor/MacroExpander.cpp
    src/compiler/preprocessor/MacroExpander.h
    src/compiler/preprocessor/Preprocessor.cpp
    src/compiler/preprocessor/Preprocessor.h
    src/compiler/preprocessor/SourceLocation.h
    src/compiler/preprocessor/Token.cpp
    src/compiler/preprocessor/Token.h
    src/compiler/preprocessor/Tokenizer.cpp
    src/compiler/preprocessor/Tokenizer.h
    src/compiler/preprocessor/Tokenizer.l
    src/compiler/preprocessor/numeric_lex.h
    src/image_util/copyimage.cpp
    src/image_util/copyimage.h
    src/image_util/copyimage.inl
    src/image_util/generatemip.h
    src/image_util/generatemip.inl
    src/image_util/imageformats.cpp
    src/image_util/imageformats.h
    src/image_util/loadimage.cpp
    src/image_util/loadimage.h
    src/image_util/loadimage.inl
    src/image_util/loadimage_etc.cpp
    src/common/Color.h
    src/common/Color.inl
    src/common/FastVector.h
    src/common/FixedVector.h
    src/common/Float16ToFloat32.cpp
    src/common/MemoryBuffer.cpp
    src/common/MemoryBuffer.h
    src/common/Optional.h
    src/common/PackedEGLEnums_autogen.cpp
    src/common/PackedEGLEnums_autogen.h
    src/common/PackedEnums.cpp
    src/common/PackedEnums.h
    src/common/PackedGLEnums_autogen.cpp
    src/common/PackedGLEnums_autogen.h
    src/common/aligned_memory.cpp
    src/common/aligned_memory.h
    src/common/angleutils.cpp
    src/common/angleutils.h
    src/common/bitset_utils.h
    src/common/debug.cpp
    src/common/debug.h
    src/common/mathutil.cpp
    src/common/mathutil.h
    src/common/matrix_utils.cpp
    src/common/matrix_utils.h
    src/common/platform.h
    src/common/string_utils.cpp
    src/common/string_utils.h
    src/common/system_utils.cpp
    src/common/system_utils.h
    src/common/third_party/base/anglebase/base_export.h
    src/common/third_party/base/anglebase/containers/mru_cache.h
    src/common/third_party/base/anglebase/logging.h
    src/common/third_party/base/anglebase/macros.h
    src/common/third_party/base/anglebase/numerics/safe_conversions.h
    src/common/third_party/base/anglebase/numerics/safe_conversions_impl.h
    src/common/third_party/base/anglebase/numerics/safe_math.h
    src/common/third_party/base/anglebase/numerics/safe_math_impl.h
    src/common/third_party/base/anglebase/sha1.cc
    src/common/third_party/base/anglebase/sha1.h
    src/common/third_party/base/anglebase/sys_byteorder.h
    src/common/third_party/smhasher/src/PMurHash.cpp
    src/common/third_party/smhasher/src/PMurHash.h
    src/common/tls.cpp
    src/common/tls.h
    src/common/uniform_type_info_autogen.cpp
    src/common/utilities.cpp
    src/common/utilities.h
    src/common/vector_utils.h
    src/common/version.h
    src/common/system_utils_linux.cpp
    src/common/event_tracer.cpp
    src/common/event_tracer.h
    src/libANGLE/AttributeMap.cpp
    src/libANGLE/AttributeMap.h
    src/libANGLE/BinaryStream.h
    src/libANGLE/BlobCache.cpp
    src/libANGLE/BlobCache.h
    src/libANGLE/Buffer.cpp
    src/libANGLE/Buffer.h
    src/libANGLE/Caps.cpp
    src/libANGLE/Caps.h
    src/libANGLE/Compiler.cpp
    src/libANGLE/Compiler.h
    src/libANGLE/Config.cpp
    src/libANGLE/Config.h
    src/libANGLE/Constants.h
    src/libANGLE/Context.cpp
    src/libANGLE/Context_gles_1_0.cpp
    src/libANGLE/Context_gles_1_0_autogen.h
    src/libANGLE/Context.h
    src/libANGLE/ContextState.cpp
    src/libANGLE/ContextState.h
    src/libANGLE/Debug.cpp
    src/libANGLE/Debug.h
    src/libANGLE/Device.cpp
    src/libANGLE/Device.h
    src/libANGLE/Display.cpp
    src/libANGLE/Display.h
    src/libANGLE/Error.cpp
    src/libANGLE/Error.h
    src/libANGLE/Error.inl
    src/libANGLE/ErrorStrings.h
    src/libANGLE/Fence.cpp
    src/libANGLE/Fence.h
    src/libANGLE/Framebuffer.cpp
    src/libANGLE/Framebuffer.h
    src/libANGLE/FramebufferAttachment.cpp
    src/libANGLE/FramebufferAttachment.h
    src/libANGLE/GLES1Renderer.cpp
    src/libANGLE/GLES1Renderer.h
    src/libANGLE/GLES1Shaders.inc
    src/libANGLE/GLES1State.cpp
    src/libANGLE/GLES1State.h
    src/libANGLE/HandleAllocator.cpp
    src/libANGLE/HandleAllocator.h
    src/libANGLE/HandleRangeAllocator.h
    src/libANGLE/HandleRangeAllocator.cpp
    src/libANGLE/Image.h
    src/libANGLE/Image.cpp
    src/libANGLE/ImageIndex.h
    src/libANGLE/ImageIndex.cpp
    src/libANGLE/IndexRangeCache.cpp
    src/libANGLE/IndexRangeCache.h
    src/libANGLE/LoggingAnnotator.cpp
    src/libANGLE/LoggingAnnotator.h
    src/libANGLE/MemoryProgramCache.cpp
    src/libANGLE/MemoryProgramCache.h
    src/libANGLE/Observer.cpp
    src/libANGLE/Observer.h
    src/libANGLE/Path.h
    src/libANGLE/Path.cpp
    src/libANGLE/Platform.cpp
    src/libANGLE/Program.cpp
    src/libANGLE/Program.h
    src/libANGLE/ProgramLinkedResources.cpp
    src/libANGLE/ProgramLinkedResources.h
    src/libANGLE/ProgramPipeline.cpp
    src/libANGLE/ProgramPipeline.h
    src/libANGLE/Query.cpp
    src/libANGLE/Query.h
    src/libANGLE/RefCountObject.h
    src/libANGLE/Renderbuffer.cpp
    src/libANGLE/Renderbuffer.h
    src/libANGLE/ResourceManager.cpp
    src/libANGLE/ResourceManager.h
    src/libANGLE/ResourceMap.h
    src/libANGLE/Sampler.cpp
    src/libANGLE/Sampler.h
    src/libANGLE/Shader.cpp
    src/libANGLE/Shader.h
    src/libANGLE/SizedMRUCache.h
    src/libANGLE/State.cpp
    src/libANGLE/State.h
    src/libANGLE/Stream.cpp
    src/libANGLE/Stream.h
    src/libANGLE/Surface.cpp
    src/libANGLE/Surface.h
    src/libANGLE/Texture.cpp
    src/libANGLE/Texture.h
    src/libANGLE/Thread.cpp
    src/libANGLE/Thread.h
    src/libANGLE/TransformFeedback.cpp
    src/libANGLE/TransformFeedback.h
    src/libANGLE/Uniform.cpp
    src/libANGLE/Uniform.h
    src/libANGLE/VaryingPacking.cpp
    src/libANGLE/VaryingPacking.h
    src/libANGLE/Version.h
    src/libANGLE/Version.inl
    src/libANGLE/VertexArray.cpp
    src/libANGLE/VertexArray.h
    src/libANGLE/VertexAttribute.cpp
    src/libANGLE/VertexAttribute.h
    src/libANGLE/VertexAttribute.inl
    src/libANGLE/Workarounds.h
    src/libANGLE/WorkerThread.cpp
    src/libANGLE/WorkerThread.h
    src/libANGLE/angletypes.cpp
    src/libANGLE/angletypes.h
    src/libANGLE/angletypes.inl
    src/libANGLE/entry_points_enum_autogen.h
    src/libANGLE/es3_copy_conversion_table_autogen.cpp
    src/libANGLE/features.h
    src/libANGLE/format_map_autogen.cpp
    src/libANGLE/formatutils.cpp
    src/libANGLE/formatutils.h
    src/libANGLE/histogram_macros.h
    src/libANGLE/params.cpp
    src/libANGLE/params.h
    src/libANGLE/queryconversions.cpp
    src/libANGLE/queryconversions.h
    src/libANGLE/queryutils.cpp
    src/libANGLE/queryutils.h
    src/libANGLE/renderer/BufferImpl.h
    src/libANGLE/renderer/CompilerImpl.h
    src/libANGLE/renderer/ContextImpl.cpp
    src/libANGLE/renderer/ContextImpl.h
    src/libANGLE/renderer/driver_utils.cpp
    src/libANGLE/renderer/driver_utils.h
    src/libANGLE/renderer/DeviceImpl.cpp
    src/libANGLE/renderer/DeviceImpl.h
    src/libANGLE/renderer/DisplayImpl.cpp
    src/libANGLE/renderer/DisplayImpl.h
    src/libANGLE/renderer/EGLImplFactory.h
    src/libANGLE/renderer/FenceNVImpl.h
    src/libANGLE/renderer/FormatID_autogen.inc
    src/libANGLE/renderer/Format_table_autogen.cpp
    src/libANGLE/renderer/Format.h
    src/libANGLE/renderer/FramebufferAttachmentObjectImpl.h
    src/libANGLE/renderer/FramebufferImpl.h
    src/libANGLE/renderer/GLImplFactory.h
    src/libANGLE/renderer/ImageImpl.h
    src/libANGLE/renderer/PathImpl.h
    src/libANGLE/renderer/ProgramImpl.h
    src/libANGLE/renderer/ProgramPipelineImpl.h
    src/libANGLE/renderer/QueryImpl.cpp
    src/libANGLE/renderer/QueryImpl.h
    src/libANGLE/renderer/RenderbufferImpl.h
    src/libANGLE/renderer/RenderTargetCache.h
    src/libANGLE/renderer/SamplerImpl.h
    src/libANGLE/renderer/ShaderImpl.h
    src/libANGLE/renderer/StreamProducerImpl.h
    src/libANGLE/renderer/SurfaceImpl.cpp
    src/libANGLE/renderer/SurfaceImpl.h
    src/libANGLE/renderer/SyncImpl.h
    src/libANGLE/renderer/TextureImpl.cpp
    src/libANGLE/renderer/TextureImpl.h
    src/libANGLE/renderer/TransformFeedbackImpl.h
    src/libANGLE/renderer/VertexArrayImpl.h
    src/libANGLE/renderer/copyvertex.h
    src/libANGLE/renderer/copyvertex.inc
    src/libANGLE/renderer/load_functions_table.h
    src/libANGLE/renderer/load_functions_table_autogen.cpp
    src/libANGLE/renderer/renderer_utils.cpp
    src/libANGLE/renderer/renderer_utils.h
    src/libANGLE/validationEGL.cpp
    src/libANGLE/validationEGL.h
    src/libANGLE/validationES.cpp
    src/libANGLE/validationES.h
    src/libANGLE/validationES1.cpp
    src/libANGLE/validationES1.h
    src/libANGLE/validationES2.cpp
    src/libANGLE/validationES2.h
    src/libANGLE/validationES3.cpp
    src/libANGLE/validationES3.h
    src/libANGLE/validationES31.cpp
    src/libANGLE/validationES31.h
    src/libEGL/libEGL.cpp
      src/libANGLE/renderer/gl/egl/ContextEGL.cpp
  src/libANGLE/renderer/gl/egl/ContextEGL.h
  src/libANGLE/renderer/gl/egl/DisplayEGL.cpp
  src/libANGLE/renderer/gl/egl/DisplayEGL.h
  src/libANGLE/renderer/gl/egl/egl_utils.cpp
  src/libANGLE/renderer/gl/egl/egl_utils.h
  src/libANGLE/renderer/gl/egl/FunctionsEGL.cpp
  src/libANGLE/renderer/gl/egl/FunctionsEGL.h
  src/libANGLE/renderer/gl/egl/ImageEGL.cpp
  src/libANGLE/renderer/gl/egl/ImageEGL.h
  src/libANGLE/renderer/gl/egl/functionsegl_typedefs.h
  src/libANGLE/renderer/gl/egl/PbufferSurfaceEGL.cpp
  src/libANGLE/renderer/gl/egl/PbufferSurfaceEGL.h
  src/libANGLE/renderer/gl/egl/RendererEGL.cpp
  src/libANGLE/renderer/gl/egl/RendererEGL.h
  src/libANGLE/renderer/gl/egl/SurfaceEGL.cpp
  src/libANGLE/renderer/gl/egl/SurfaceEGL.h
  src/libANGLE/renderer/gl/egl/WindowSurfaceEGL.cpp
  src/libANGLE/renderer/gl/egl/WindowSurfaceEGL.h
    src/third_party/trace_event/trace_event.h
    src/libANGLE/renderer/gl/BlitGL.cpp
    src/libANGLE/renderer/gl/BlitGL.h
    src/libANGLE/renderer/gl/BufferGL.cpp
    src/libANGLE/renderer/gl/BufferGL.h
    src/libANGLE/renderer/gl/ClearMultiviewGL.cpp
    src/libANGLE/renderer/gl/ClearMultiviewGL.h
    src/libANGLE/renderer/gl/CompilerGL.cpp
    src/libANGLE/renderer/gl/CompilerGL.h
    src/libANGLE/renderer/gl/ContextGL.cpp
    src/libANGLE/renderer/gl/ContextGL.h
    src/libANGLE/renderer/gl/DispatchTableGL_autogen.cpp
    src/libANGLE/renderer/gl/DispatchTableGL_autogen.h
    src/libANGLE/renderer/gl/DisplayGL.cpp
    src/libANGLE/renderer/DisplayVITA.cpp
    src/libANGLE/renderer/gl/DisplayGL.h
    src/libANGLE/renderer/gl/FenceNVGL.cpp
    src/libANGLE/renderer/gl/FenceNVGL.h
    src/libANGLE/renderer/gl/FramebufferGL.cpp
    src/libANGLE/renderer/gl/FramebufferGL.h
    src/libANGLE/renderer/gl/FunctionsGL.cpp
    src/libANGLE/renderer/gl/FunctionsGL.h
    src/libANGLE/renderer/gl/ImageGL.cpp
    src/libANGLE/renderer/gl/ImageGL.h
    src/libANGLE/renderer/gl/PathGL.h
    src/libANGLE/renderer/gl/PathGL.cpp
    src/libANGLE/renderer/gl/ProgramGL.cpp
    src/libANGLE/renderer/gl/ProgramGL.h
    src/libANGLE/renderer/gl/ProgramPipelineGL.cpp
    src/libANGLE/renderer/gl/ProgramPipelineGL.h
    src/libANGLE/renderer/gl/QueryGL.cpp
    src/libANGLE/renderer/gl/QueryGL.h
    src/libANGLE/renderer/gl/RenderbufferGL.cpp
    src/libANGLE/renderer/gl/RenderbufferGL.h
    src/libANGLE/renderer/gl/RendererGL.cpp
    src/libANGLE/renderer/gl/RendererGL.h
    src/libANGLE/renderer/gl/SamplerGL.cpp
    src/libANGLE/renderer/gl/SamplerGL.h
    src/libANGLE/renderer/gl/ShaderGL.cpp
    src/libANGLE/renderer/gl/ShaderGL.h
    src/libANGLE/renderer/gl/StateManagerGL.cpp
    src/libANGLE/renderer/gl/StateManagerGL.h
    src/libANGLE/renderer/gl/SurfaceGL.cpp
    src/libANGLE/renderer/gl/SurfaceGL.h
    src/libANGLE/renderer/gl/SyncGL.cpp
    src/libANGLE/renderer/gl/SyncGL.h
    src/libANGLE/renderer/gl/TextureGL.cpp
    src/libANGLE/renderer/gl/TextureGL.h
    src/libANGLE/renderer/gl/TransformFeedbackGL.cpp
    src/libANGLE/renderer/gl/TransformFeedbackGL.h
    src/libANGLE/renderer/gl/VertexArrayGL.cpp
    src/libANGLE/renderer/gl/VertexArrayGL.h
    src/libANGLE/renderer/gl/WorkaroundsGL.h
    src/libANGLE/renderer/gl/formatutilsgl.cpp
    src/libANGLE/renderer/gl/formatutilsgl.h
    src/libANGLE/renderer/gl/functionsgl_enums.h
    src/libANGLE/renderer/gl/functionsgl_typedefs.h
    src/libANGLE/renderer/gl/renderergl_utils.cpp
    src/libANGLE/renderer/gl/renderergl_utils.h
    src/common/angleutils.h
    src/common/debug.h
    src/libGLESv2/entry_points_egl.cpp
    src/libGLESv2/entry_points_egl.h
    src/libGLESv2/entry_points_egl_ext.cpp
    src/libGLESv2/entry_points_egl_ext.h
    src/libGLESv2/entry_points_gles_1_0_autogen.cpp
    src/libGLESv2/entry_points_gles_1_0_autogen.h
    src/libGLESv2/entry_points_gles_2_0_autogen.cpp
    src/libGLESv2/entry_points_gles_2_0_autogen.h
    src/libGLESv2/entry_points_gles_3_0_autogen.cpp
    src/libGLESv2/entry_points_gles_3_0_autogen.h
    src/libGLESv2/entry_points_gles_3_1_autogen.cpp
    src/libGLESv2/entry_points_gles_3_1_autogen.h
    src/libGLESv2/entry_points_gles_ext_autogen.cpp
    src/libGLESv2/entry_points_gles_ext_autogen.h
    src/libGLESv2/global_state.cpp
    src/libGLESv2/global_state.h
    src/libGLESv2/libGLESv2_autogen.cpp
    src/libGLESv2/libGLESv2.rc
    src/libGLESv2/proc_table.h
    src/libGLESv2/proc_table_autogen.cpp
    src/libGLESv2/resource.h
)
include_directories(src
src/common/third_party/base/
include
third_party/glslang/src/glslang/Include/)
add_library(libGLESv2 ${SOURCES})
