# Copyright (c) 2013 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

sources = [
  "src/common/Color.h",
  "src/common/Color.inl",
  "src/common/FastVector.h",
  "src/common/FixedVector.h",
  "src/common/Float16ToFloat32.cpp",
  "src/common/MemoryBuffer.cpp",
  "src/common/MemoryBuffer.h",
  "src/common/Optional.h",
  "src/common/PackedEGLEnums_autogen.cpp",
  "src/common/PackedEGLEnums_autogen.h",
  "src/common/PackedEnums.cpp",
  "src/common/PackedEnums.h",
  "src/common/PackedGLEnums_autogen.cpp",
  "src/common/PackedGLEnums_autogen.h",
  "src/common/aligned_memory.cpp",
  "src/common/aligned_memory.h",
  "src/common/angleutils.cpp",
  "src/common/angleutils.h",
  "src/common/bitset_utils.h",
  "src/common/debug.cpp",
  "src/common/debug.h",
  "src/common/mathutil.cpp",
  "src/common/mathutil.h",
  "src/common/matrix_utils.cpp",
  "src/common/matrix_utils.h",
  "src/common/platform.h",
  "src/common/string_utils.cpp",
  "src/common/string_utils.h",
  "src/common/system_utils.cpp",
  "src/common/system_utils.h",
  "src/common/third_party/base/anglebase/base_export.h",
  "src/common/third_party/base/anglebase/containers/mru_cache.h",
  "src/common/third_party/base/anglebase/logging.h",
  "src/common/third_party/base/anglebase/macros.h",
  "src/common/third_party/base/anglebase/numerics/safe_conversions.h",
  "src/common/third_party/base/anglebase/numerics/safe_conversions_impl.h",
  "src/common/third_party/base/anglebase/numerics/safe_math.h",
  "src/common/third_party/base/anglebase/numerics/safe_math_impl.h",
  "src/common/third_party/base/anglebase/sha1.cc",
  "src/common/third_party/base/anglebase/sha1.h",
  "src/common/third_party/base/anglebase/sys_byteorder.h",
  "src/common/third_party/smhasher/src/PMurHash.cpp",
  "src/common/third_party/smhasher/src/PMurHash.h",
  "src/common/tls.cpp",
  "src/common/tls.h",
  "src/common/uniform_type_info_autogen.cpp",
  "src/common/utilities.cpp",
  "src/common/utilities.h",
  "src/common/vector_utils.h",
  "src/common/version.h",

  "src/common/system_utils_linux.cpp",

  "src/common/event_tracer.cpp",
  "src/common/event_tracer.h",
  "src/libANGLE/AttributeMap.cpp",
  "src/libANGLE/AttributeMap.h",
  "src/libANGLE/BinaryStream.h",
  "src/libANGLE/BlobCache.cpp",
  "src/libANGLE/BlobCache.h",
  "src/libANGLE/Buffer.cpp",
  "src/libANGLE/Buffer.h",
  "src/libANGLE/Caps.cpp",
  "src/libANGLE/Caps.h",
  "src/libANGLE/Compiler.cpp",
  "src/libANGLE/Compiler.h",
  "src/libANGLE/Config.cpp",
  "src/libANGLE/Config.h",
  "src/libANGLE/Constants.h",
  "src/libANGLE/Context.cpp",
  "src/libANGLE/Context_gles_1_0.cpp",
  "src/libANGLE/Context_gles_1_0_autogen.h",
  "src/libANGLE/Context.h",
  "src/libANGLE/ContextState.cpp",
  "src/libANGLE/ContextState.h",
  "src/libANGLE/Debug.cpp",
  "src/libANGLE/Debug.h",
  "src/libANGLE/Device.cpp",
  "src/libANGLE/Device.h",
  "src/libANGLE/Display.cpp",
  "src/libANGLE/Display.h",
  "src/libANGLE/Error.cpp",
  "src/libANGLE/Error.h",
  "src/libANGLE/Error.inl",
  "src/libANGLE/ErrorStrings.h",
  "src/libANGLE/Fence.cpp",
  "src/libANGLE/Fence.h",
  "src/libANGLE/Framebuffer.cpp",
  "src/libANGLE/Framebuffer.h",
  "src/libANGLE/FramebufferAttachment.cpp",
  "src/libANGLE/FramebufferAttachment.h",
  "src/libANGLE/GLES1Renderer.cpp",
  "src/libANGLE/GLES1Renderer.h",
  "src/libANGLE/GLES1Shaders.inc",
  "src/libANGLE/GLES1State.cpp",
  "src/libANGLE/GLES1State.h",
  "src/libANGLE/HandleAllocator.cpp",
  "src/libANGLE/HandleAllocator.h",
  "src/libANGLE/HandleRangeAllocator.h",
  "src/libANGLE/HandleRangeAllocator.cpp",
  "src/libANGLE/Image.h",
  "src/libANGLE/Image.cpp",
  "src/libANGLE/ImageIndex.h",
  "src/libANGLE/ImageIndex.cpp",
  "src/libANGLE/IndexRangeCache.cpp",
  "src/libANGLE/IndexRangeCache.h",
  "src/libANGLE/LoggingAnnotator.cpp",
  "src/libANGLE/LoggingAnnotator.h",
  "src/libANGLE/MemoryProgramCache.cpp",
  "src/libANGLE/MemoryProgramCache.h",
  "src/libANGLE/Observer.cpp",
  "src/libANGLE/Observer.h",
  "src/libANGLE/Path.h",
  "src/libANGLE/Path.cpp",
  "src/libANGLE/Platform.cpp",
  "src/libANGLE/Program.cpp",
  "src/libANGLE/Program.h",
  "src/libANGLE/ProgramLinkedResources.cpp",
  "src/libANGLE/ProgramLinkedResources.h",
  "src/libANGLE/ProgramPipeline.cpp",
  "src/libANGLE/ProgramPipeline.h",
  "src/libANGLE/Query.cpp",
  "src/libANGLE/Query.h",
  "src/libANGLE/RefCountObject.h",
  "src/libANGLE/Renderbuffer.cpp",
  "src/libANGLE/Renderbuffer.h",
  "src/libANGLE/ResourceManager.cpp",
  "src/libANGLE/ResourceManager.h",
  "src/libANGLE/ResourceMap.h",
  "src/libANGLE/Sampler.cpp",
  "src/libANGLE/Sampler.h",
  "src/libANGLE/Shader.cpp",
  "src/libANGLE/Shader.h",
  "src/libANGLE/SizedMRUCache.h",
  "src/libANGLE/State.cpp",
  "src/libANGLE/State.h",
  "src/libANGLE/Stream.cpp",
  "src/libANGLE/Stream.h",
  "src/libANGLE/Surface.cpp",
  "src/libANGLE/Surface.h",
  "src/libANGLE/Texture.cpp",
  "src/libANGLE/Texture.h",
  "src/libANGLE/Thread.cpp",
  "src/libANGLE/Thread.h",
  "src/libANGLE/TransformFeedback.cpp",
  "src/libANGLE/TransformFeedback.h",
  "src/libANGLE/Uniform.cpp",
  "src/libANGLE/Uniform.h",
  "src/libANGLE/VaryingPacking.cpp",
  "src/libANGLE/VaryingPacking.h",
  "src/libANGLE/Version.h",
  "src/libANGLE/Version.inl",
  "src/libANGLE/VertexArray.cpp",
  "src/libANGLE/VertexArray.h",
  "src/libANGLE/VertexAttribute.cpp",
  "src/libANGLE/VertexAttribute.h",
  "src/libANGLE/VertexAttribute.inl",
  "src/libANGLE/Workarounds.h",
  "src/libANGLE/WorkerThread.cpp",
  "src/libANGLE/WorkerThread.h",
  "src/libANGLE/angletypes.cpp",
  "src/libANGLE/angletypes.h",
  "src/libANGLE/angletypes.inl",
  "src/libANGLE/entry_points_enum_autogen.h",
  "src/libANGLE/es3_copy_conversion_table_autogen.cpp",
  "src/libANGLE/features.h",
  "src/libANGLE/format_map_autogen.cpp",
  "src/libANGLE/formatutils.cpp",
  "src/libANGLE/formatutils.h",
  "src/libANGLE/histogram_macros.h",
  "src/libANGLE/params.cpp",
  "src/libANGLE/params.h",
  "src/libANGLE/queryconversions.cpp",
  "src/libANGLE/queryconversions.h",
  "src/libANGLE/queryutils.cpp",
  "src/libANGLE/queryutils.h",
  "src/libANGLE/renderer/BufferImpl.h",
  "src/libANGLE/renderer/CompilerImpl.h",
  "src/libANGLE/renderer/ContextImpl.cpp",
  "src/libANGLE/renderer/ContextImpl.h",
  "src/libANGLE/renderer/driver_utils.cpp",
  "src/libANGLE/renderer/driver_utils.h",
  "src/libANGLE/renderer/DeviceImpl.cpp",
  "src/libANGLE/renderer/DeviceImpl.h",
  "src/libANGLE/renderer/DisplayImpl.cpp",
  "src/libANGLE/renderer/DisplayImpl.h",
  "src/libANGLE/renderer/EGLImplFactory.h",
  "src/libANGLE/renderer/FenceNVImpl.h",
  "src/libANGLE/renderer/FormatID_autogen.inc",
  "src/libANGLE/renderer/Format_table_autogen.cpp",
  "src/libANGLE/renderer/Format.h",
  "src/libANGLE/renderer/FramebufferAttachmentObjectImpl.h",
  "src/libANGLE/renderer/FramebufferImpl.h",
  "src/libANGLE/renderer/GLImplFactory.h",
  "src/libANGLE/renderer/ImageImpl.h",
  "src/libANGLE/renderer/PathImpl.h",
  "src/libANGLE/renderer/ProgramImpl.h",
  "src/libANGLE/renderer/ProgramPipelineImpl.h",
  "src/libANGLE/renderer/QueryImpl.cpp",
  "src/libANGLE/renderer/QueryImpl.h",
  "src/libANGLE/renderer/RenderbufferImpl.h",
  "src/libANGLE/renderer/RenderTargetCache.h",
  "src/libANGLE/renderer/SamplerImpl.h",
  "src/libANGLE/renderer/ShaderImpl.h",
  "src/libANGLE/renderer/StreamProducerImpl.h",
  "src/libANGLE/renderer/SurfaceImpl.cpp",
  "src/libANGLE/renderer/SurfaceImpl.h",
  "src/libANGLE/renderer/SyncImpl.h",
  "src/libANGLE/renderer/TextureImpl.cpp",
  "src/libANGLE/renderer/TextureImpl.h",
  "src/libANGLE/renderer/TransformFeedbackImpl.h",
  "src/libANGLE/renderer/VertexArrayImpl.h",
  "src/libANGLE/renderer/copyvertex.h",
  "src/libANGLE/renderer/copyvertex.inc",
  "src/libANGLE/renderer/load_functions_table.h",
  "src/libANGLE/renderer/load_functions_table_autogen.cpp",
  "src/libANGLE/renderer/renderer_utils.cpp",
  "src/libANGLE/renderer/renderer_utils.h",
  "src/libANGLE/validationEGL.cpp",
  "src/libANGLE/validationEGL.h",
  "src/libANGLE/validationES.cpp",
  "src/libANGLE/validationES.h",
  "src/libANGLE/validationES1.cpp",
  "src/libANGLE/validationES1.h",
  "src/libANGLE/validationES2.cpp",
  "src/libANGLE/validationES2.h",
  "src/libANGLE/validationES3.cpp",
  "src/libANGLE/validationES3.h",
  "src/libANGLE/validationES31.cpp",
  "src/libANGLE/validationES31.h",
  "src/third_party/trace_event/trace_event.h",
  "src/libANGLE/renderer/gl/BlitGL.cpp",
  "src/libANGLE/renderer/gl/BlitGL.h",
  "src/libANGLE/renderer/gl/BufferGL.cpp",
  "src/libANGLE/renderer/gl/BufferGL.h",
  "src/libANGLE/renderer/gl/ClearMultiviewGL.cpp",
  "src/libANGLE/renderer/gl/ClearMultiviewGL.h",
  "src/libANGLE/renderer/gl/CompilerGL.cpp",
  "src/libANGLE/renderer/gl/CompilerGL.h",
  "src/libANGLE/renderer/gl/ContextGL.cpp",
  "src/libANGLE/renderer/gl/ContextGL.h",
  "src/libANGLE/renderer/gl/DispatchTableGL_autogen.cpp",
  "src/libANGLE/renderer/gl/DispatchTableGL_autogen.h",
  "src/libANGLE/renderer/gl/DisplayGL.cpp",
  "src/libANGLE/renderer/gl/DisplayGL.h",
  "src/libANGLE/renderer/gl/FenceNVGL.cpp",
  "src/libANGLE/renderer/gl/FenceNVGL.h",
  "src/libANGLE/renderer/gl/FramebufferGL.cpp",
  "src/libANGLE/renderer/gl/FramebufferGL.h",
  "src/libANGLE/renderer/gl/FunctionsGL.cpp",
  "src/libANGLE/renderer/gl/FunctionsGL.h",
  "src/libANGLE/renderer/gl/ImageGL.cpp",
  "src/libANGLE/renderer/gl/ImageGL.h",
  "src/libANGLE/renderer/gl/PathGL.h",
  "src/libANGLE/renderer/gl/PathGL.cpp",
  "src/libANGLE/renderer/gl/ProgramGL.cpp",
  "src/libANGLE/renderer/gl/ProgramGL.h",
  "src/libANGLE/renderer/gl/ProgramPipelineGL.cpp",
  "src/libANGLE/renderer/gl/ProgramPipelineGL.h",
  "src/libANGLE/renderer/gl/QueryGL.cpp",
  "src/libANGLE/renderer/gl/QueryGL.h",
  "src/libANGLE/renderer/gl/RenderbufferGL.cpp",
  "src/libANGLE/renderer/gl/RenderbufferGL.h",
  "src/libANGLE/renderer/gl/RendererGL.cpp",
  "src/libANGLE/renderer/gl/RendererGL.h",
  "src/libANGLE/renderer/gl/SamplerGL.cpp",
  "src/libANGLE/renderer/gl/SamplerGL.h",
  "src/libANGLE/renderer/gl/ShaderGL.cpp",
  "src/libANGLE/renderer/gl/ShaderGL.h",
  "src/libANGLE/renderer/gl/StateManagerGL.cpp",
  "src/libANGLE/renderer/gl/StateManagerGL.h",
  "src/libANGLE/renderer/gl/SurfaceGL.cpp",
  "src/libANGLE/renderer/gl/SurfaceGL.h",
  "src/libANGLE/renderer/gl/SyncGL.cpp",
  "src/libANGLE/renderer/gl/SyncGL.h",
  "src/libANGLE/renderer/gl/TextureGL.cpp",
  "src/libANGLE/renderer/gl/TextureGL.h",
  "src/libANGLE/renderer/gl/TransformFeedbackGL.cpp",
  "src/libANGLE/renderer/gl/TransformFeedbackGL.h",
  "src/libANGLE/renderer/gl/VertexArrayGL.cpp",
  "src/libANGLE/renderer/gl/VertexArrayGL.h",
  "src/libANGLE/renderer/gl/WorkaroundsGL.h",
  "src/libANGLE/renderer/gl/formatutilsgl.cpp",
  "src/libANGLE/renderer/gl/formatutilsgl.h",
  "src/libANGLE/renderer/gl/functionsgl_enums.h",
  "src/libANGLE/renderer/gl/functionsgl_typedefs.h",
  "src/libANGLE/renderer/gl/renderergl_utils.cpp",
  "src/libANGLE/renderer/gl/renderergl_utils.h",
  "src/common/angleutils.h",
  "src/common/debug.h",
  "src/libGLESv2/entry_points_egl.cpp",
  "src/libGLESv2/entry_points_egl.h",
  "src/libGLESv2/entry_points_egl_ext.cpp",
  "src/libGLESv2/entry_points_egl_ext.h",
  "src/libGLESv2/entry_points_gles_1_0_autogen.cpp",
  "src/libGLESv2/entry_points_gles_1_0_autogen.h",
  "src/libGLESv2/entry_points_gles_2_0_autogen.cpp",
  "src/libGLESv2/entry_points_gles_2_0_autogen.h",
  "src/libGLESv2/entry_points_gles_3_0_autogen.cpp",
  "src/libGLESv2/entry_points_gles_3_0_autogen.h",
  "src/libGLESv2/entry_points_gles_3_1_autogen.cpp",
  "src/libGLESv2/entry_points_gles_3_1_autogen.h",
  "src/libGLESv2/entry_points_gles_ext_autogen.cpp",
  "src/libGLESv2/entry_points_gles_ext_autogen.h",
  "src/libGLESv2/global_state.cpp",
  "src/libGLESv2/global_state.h",
  "src/libGLESv2/libGLESv2_autogen.cpp",
  "src/libGLESv2/libGLESv2.rc",
  "src/libGLESv2/proc_table.h",
  "src/libGLESv2/proc_table_autogen.cpp",
  "src/libGLESv2/resource.h",
]

executable("libGLESv2.a") {
  deps = [
    "",
  ]
  sources = sources
}
